--- a/app/templates/default.jade
+++ b/app/templates/default.jade
@@ -1,5 +1,7 @@
-//
-   Created by twb on 04.01.15.
+//-   Created by twb on 04.01.15.
 
 doctype html
 html(lang='ru')
+	include head
+	body
+		include header
